freest/test/prog/Invalid/SessionTypes/ExposeOutput/ExposeOutput.fst
module ExposeOutput where

foo : Int
foo = send 1 1